<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="30dp"
            android:id="@+id/email_login_form"
            android:paddingTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:textSize="50sp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:text="Đăng Nhập"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:imeOptions="actionNext"
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_marginRight="100dp"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shadow"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />
                    <Button
                        android:id="@+id/btnCancle"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:textColor="#ffffff"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shadow"
                        android:text="@string/action_cancle"
                        android:textStyle="bold" />

            </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>